# azalea-desktop-shell

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: pages.yml
azalea/: Cargo.toml
azalea-core/: Cargo.toml
azalea-core/src/: app.rs  cli.rs  config.rs  dbus.rs  error.rs  lib.rs  log.rs  model.rs  monitor.rs  socket.rs  style.scss
azalea-derive/: Cargo.toml  lib.rs
azalea-log/: Cargo.toml  lib.rs
azalea-log/src/: lib.rs
azalea-service/: Cargo.toml
azalea-service/src/: handler.rs  lib.rs  macro.rs  service.rs  status.rs  trait.rs
azalea-service/src/dbus/: media_player2.rs  mod.rs
azalea-service/src/dbus/mpris/: media_player2.rs
azalea-service/src/service/: error.rs  handler.rs  mod.rs  status.rs
azalea-service/src/service2/: mod.rs
azalea-service/src/services/: mod.rs  mpris.rs  time.rs
azalea-service/src/services/dbus/: discovery.rs  mod.rs  mpris.rs
azalea-service/src/services/mpris/: dbus.rs  mod.rs
azalea-shell/: Cargo.toml  build.rs
azalea-shell/src/: icon.rs  lib.rs
azalea-shell/src/component/: image.rs  login.rs  mod.rs
azalea-shell/src/factory/: mod.rs
azalea-shell/src/factory/bluetooth/: device.rs
azalea-shell/src/factory/media/: player.rs
azalea-shell/src/factory/network/: connection.rs  device.rs
azalea-shell/src/factory/notification/: mod.rs
azalea-shell/src/factory/search/: apps.rs
azalea-shell/src/service/: audio.rs  brightness.rs  mod.rs  search.rs  time.rs  weather.rs
azalea-shell/src/service/dbus/: discovery.rs  mod.rs
azalea-shell/src/service/dbus/bluez/: mod.rs
azalea-shell/src/service/dbus/login/: mod.rs  proxy.rs
azalea-shell/src/service/dbus/mpris/: mod.rs
azalea-shell/src/service/dbus/network_manager/: mod.rs  proxy.rs
azalea-shell/src/service/dbus/notification/: mod.rs  service.rs
azalea-shell/src/window/: mod.rs
azalea-shell/src/window/taskbar/: mod.rs
azalea-shell/src/window/taskbar/widget/: audio.rs  brightness.rs  mod.rs  separator.rs  time.rs
azalea-shell/src/window/taskbar/widget/bluetooth/: menu.rs  mod.rs
azalea-shell/src/window/taskbar/widget/media/: mod.rs
azalea-shell/src/window/taskbar/widget/mpris/: mod.rs
azalea-shell/src/window/taskbar/widget/network/: mod.rs
azalea-shell/src/window/taskbar/widget/notification/: mod.rs
azalea-shell/src/window/taskbar/widget/search/: apps.rs  mod.rs
azalea-shell/src/window/taskbar/widget/shortcut/: mod.rs
azalea-shell/src/window/taskbar/widget/startmenu/: mod.rs
azalea-shell/src/window/wallpaper/: mod.rs
azalea-window/: Cargo.toml  build.rs
azalea-window/src/: icon.rs  lib.rs
azalea-window/src/component/: image.rs
azalea-window/src/services/: time.rs
azalea-window/src/services/dbus/: discovery.rs
azalea-window/src/services/dbus/mpris/: mod.rs
azalea-window/src/taskbar/: mod.rs
azalea-window/src/taskbar/widget/: mod.rs  mpris.rs  time.rs
azalea-window/src/taskbar/widget/mpris/: menu.rs  mod.rs
azalea-window/src/window/: mod.rs
azalea-window/src/window/taskbar/widget/: mod.rs
azalea-window/src/window/taskbar/widget/mpris/: menu.rs
azalea/src/: lib.rs  main.rs
azalea/src/lib/: app.rs  cli.rs  config.rs  model.rs
azalea/src/main/: mod.rs
nix/: package.nix
nix/test/: config.ron  default.nix
nix/test/nodes/: hyprland.nix  miracle-wm.nix  niri.nix  sway.nix  wayfire.nix
nix/tests/: hyprland.nix
src/lib/: app.rs  cli.rs  mod.rs  socket.rs
src/main/: mod.rs
