[workspace]
resolver = "2"
members = [
  "azalea",
  "azalea-core",
  "azalea-service",
  "azalea-window",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["enzohideo"]

[workspace.dependencies]
azalea-core = { path = "azalea-core" }
azalea-window = { path = "azalea-window" }
azalea-service = { path = "azalea-service" }

clap = { version = "4.5.32", features = [ "derive" ] }

async-net = "2.0.0"
futures-lite = "2.6.0"

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

chrono = "0.4.41"
tokio = { version = "1.44.2", features = ["time"] }
zbus = "5.6.0"

gtk = { version = "0.9.6", package = "gtk4", features = ["v4_16"] }
gtk4-layer-shell = "0.5.0"
relm4 = "0.9.1"
