[workspace]
resolver = "2"
members = [ "azalea*" ]

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["enzohideo"]

[workspace.metadata.crane]
name = "azalea"

[workspace.dependencies]
azalea-core = { path = "azalea-core" }
azalea-derive = { path = "azalea-derive" }
azalea-log = { path = "azalea-log" }
azalea-shell = { path = "azalea-shell" }
azalea-service = { path = "azalea-service" }

clap = { version = "4.5.32", features = [ "derive" ] }

async-net = "2.0.0"
futures-lite = "2.6.0"

serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
ron = "0.10.1"

chrono = "0.4.41"
tokio = { version = "1.44.2", features = ["time", "macros"] }
zbus = { version = "5.7.1", features = ["tokio"] }
zbus_names = "4.2.0"

gtk = { version = "0.9.6", package = "gtk4", features = ["v4_16"] }
gtk4-layer-shell = "0.5.0"
glib = { version = "0.20.10", features = ["log"] }
relm4 = "0.9.1"

thiserror = "2.0.12"
