[package]
name = "azalea-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
azalea-log.workspace = true

clap.workspace = true

async-net.workspace = true
futures-lite.workspace = true

serde.workspace = true
serde_json.workspace = true
ron.workspace = true

zbus.workspace = true
zbus_names.workspace = true

gtk.workspace = true
gtk4-layer-shell.workspace = true

thiserror.workspace = true
grass = "0.13.4"
