[package]
name = "azalea-service"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

chrono.workspace = true
zbus.workspace = true

gtk.workspace = true
gtk4-layer-shell.workspace = true
relm4.workspace = true

flume = "0.11.1"
tokio.workspace = true

thiserror.workspace = true
