[package]
name = "azalea-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
azalea-log.workspace = true
azalea-derive.workspace = true
azalea-service.workspace = true

clap.workspace = true
serde.workspace = true
serde_json.workspace = true

chrono.workspace = true
tokio.workspace = true
flume = "0.11.1"
zbus.workspace = true
zbus_names.workspace = true
futures-lite.workspace = true

gtk.workspace = true
gtk4-layer-shell.workspace = true
relm4.workspace = true
relm4-icons.workspace = true

reqwest = "0.12.18"
base64 = "0.22.1"
serde_repr = "0.1.20"
bluer = { version = "0.17.4", features = ["bluetoothd"] }
alsa = "0.10.0"
system-tray = "0.8.4"
wayland-protocols = { version = "0.32.9", features = ["staging", "client"] }
wayland-client = "0.31.11"
brightness = "0.8.0"
open-meteo-rs = "0.0.4"
ffetch = "0.6.0"

[build-dependencies]
relm4-icons-build.workspace = true
