[package]
name = "azalea-window"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

gtk.workspace = true
gtk4-layer-shell.workspace = true
relm4.workspace = true
