[package]
name = "azalea-window"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
azalea-log.workspace = true
azalea-service.workspace = true

clap.workspace = true
serde.workspace = true
serde_json.workspace = true

chrono.workspace = true
tokio.workspace = true

gtk.workspace = true
gtk4-layer-shell.workspace = true
relm4.workspace = true

reqwest = "0.12.18"
