[package]
name = "azalea"
version = "0.1.0"
edition = "2024"
default-run = "azalea"

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "azalea"
path = "src/main/mod.rs"

[dependencies]
clap = { version = "4.5.32", features = [ "derive" ] }

async-net = "2.0.0"
futures-lite = "2.6.0"

bincode = "2.0.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

gtk = { version = "0.9.6", package = "gtk4", features = ["v4_16"] }
gtk4-layer-shell = "0.5.0"
relm4 = "0.9.1"
