[package]
name = "azalea"
version.workspace = true
edition.workspace = true
authors.workspace = true
default-run = "azalea"

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "azalea"
path = "src/main/mod.rs"

[dependencies]
clap = { version = "4.5.32", features = [ "derive" ] }

async-net = "2.0.0"
futures-lite = "2.6.0"

bincode = "2.0.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

gtk.workspace = true
gtk4-layer-shell.workspace = true
relm4.workspace = true
